--- a/RazorSolution/ACentenoWebApp/ACentenoWebApp.csproj
+++ b/RazorSolution/ACentenoWebApp/ACentenoWebApp.csproj
@@ -108,12 +108,16 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="ExercisePages\Exercise02_A.cshtml" />
+    <Content Include="ExercisePages\Exercise02_B.cshtml" />
+    <Content Include="ExercisePages\Exercise02_C.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <Content Include="Web.config" />
+    <Content Include="WebConnectionStrings.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
