--- a/RazorSolution/ACentenoWebApp/ACentenoWebApp.csproj
+++ b/RazorSolution/ACentenoWebApp/ACentenoWebApp.csproj
@@ -112,6 +112,8 @@
     <Content Include="ExercisePages\Exercise02_B.cshtml" />
     <Content Include="ExercisePages\Exercise02_C.cshtml" />
     <Content Include="ExercisePages\Exercise03.cshtml" />
+    <Content Include="ExercisePages\Exercise04_AlbumSearch.cshtml" />
+    <Content Include="ExercisePages\Exercise04_AlbumEdit.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
