--- a/Fort Sasquatch Indoor Soccer/BigFootWebApp/Web.config
+++ b/Fort Sasquatch Indoor Soccer/BigFootWebApp/Web.config
@@ -46,9 +46,9 @@
   <entityFramework>
     <contexts>
       <context disableDatabaseInitialization="true"
-               type="NorthWindSystem.DAL.FSISContext, NorthWindSystem">
+               type="FSISSystem.ACent.DAL.FSISContext, FSISSystem.ACent">
         </context>
-    </contexts>
+     </contexts>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
