--- a/NorthWindSolution/NorthWindSystem/NorthWindSystem.csproj
+++ b/NorthWindSolution/NorthWindSystem/NorthWindSystem.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
