Exercise 6 basic fxns working

--- a/Fort Sasquatch Indoor Soccer/BigFootWebApp/BigFootWebApp.csproj
+++ b/Fort Sasquatch Indoor Soccer/BigFootWebApp/BigFootWebApp.csproj
@@ -124,6 +124,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="ExercisePages\ExerciseHome.aspx" />
+    <Content Include="ExercisePages\MultipleRecordQuery.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -284,6 +285,13 @@
     </Compile>
     <Compile Include="ExercisePages\ExerciseHome.aspx.designer.cs">
       <DependentUpon>ExerciseHome.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ExercisePages\MultipleRecordQuery.aspx.cs">
+      <DependentUpon>MultipleRecordQuery.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ExercisePages\MultipleRecordQuery.aspx.designer.cs">
+      <DependentUpon>MultipleRecordQuery.aspx</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
