--- a/Fort Sasquatch Indoor Soccer/FSISSystem.ACent/FSISSystem.ACent.csproj
+++ b/Fort Sasquatch Indoor Soccer/FSISSystem.ACent/FSISSystem.ACent.csproj
@@ -52,7 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BLL\dummy1.cs" />
+    <Compile Include="BLL\PlayerController.cs" />
+    <Compile Include="BLL\TeamController.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="DAL\FSISContext.cs" />
     <Compile Include="Entities\Guardian.cs" />
