--- a/StarTEDSolution/StarTEDSystem/StarTEDSystem.csproj
+++ b/StarTEDSolution/StarTEDSystem/StarTEDSystem.csproj
@@ -53,7 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BLL\dummy1.cs" />
+    <Compile Include="BLL\AddressesController.cs" />
+    <Compile Include="BLL\PropertyOwnersController.cs" />
+    <Compile Include="BLL\RentalsController.cs" />
+    <Compile Include="BLL\RentalTypesController.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="DAL\StarTEDContext.cs" />
     <Compile Include="Entities\Addresses.cs" />
@@ -70,7 +73,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
