--- a/Fort Sasquatch Indoor Soccer/BigFootWebApp/WebConnectionStrings.config
+++ b/Fort Sasquatch Indoor Soccer/BigFootWebApp/WebConnectionStrings.config
@@ -1,5 +1,5 @@
 ﻿<connectionStrings>
   <add name="FSIS_db"
-       connectionString="Data Source=.;Initial Catalog=FSIS_Database;Integrated Security=True;"
+       connectionString="Data Source=TOBY-PC\SQLEXPRESS;Initial Catalog=FSIS_Database;Integrated Security=True;"
        providerName="System.Data.SqlClient"/>
 </connectionStrings>
