Course Project Deliv 3 Final

--- a/StarTEDSolution/StarTEDWebApp/StarTEDWebApp.csproj
+++ b/StarTEDSolution/StarTEDWebApp/StarTEDWebApp.csproj
@@ -352,6 +352,12 @@
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StarTEDSystem\StarTEDSystem.csproj">
+      <Project>{471ab7f6-8f8a-4781-a9dc-c115b3af9e4d}</Project>
+      <Name>StarTEDSystem</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
