--- a/StarTEDSolution/StarTEDWebApp/WebConnectionStrings.config
+++ b/StarTEDSolution/StarTEDWebApp/WebConnectionStrings.config
@@ -1,5 +1,5 @@
 ﻿<connectionStrings>
-  <add name="StarTEDDb"
-       connectionString="Data Source=.;Initial Catalog=StarTED;Integrated Security=True"
+  <add name="StarTED_db"
+       connectionString="Data Source=TOBY-PC\SQLEXPRESS;Initial Catalog=StarTED;Integrated Security=True"
        providerName="System.Data.SqlClient" />
 </connectionStrings>
