--- a/Fort Sasquatch Indoor Soccer/BigFootWebApp/BigFootWebApp.csproj
+++ b/Fort Sasquatch Indoor Soccer/BigFootWebApp/BigFootWebApp.csproj
@@ -123,6 +123,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
+    <Content Include="ExercisePages\CRUDInsert.aspx" />
     <Content Include="ExercisePages\ExerciseHome.aspx" />
     <Content Include="ExercisePages\MultipleRecordQuery.aspx" />
     <Content Include="ExercisePages\MultiRecordODS.aspx" />
@@ -279,6 +280,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ExercisePages\CRUDInsert.aspx.cs">
+      <DependentUpon>CRUDInsert.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ExercisePages\CRUDInsert.aspx.designer.cs">
+      <DependentUpon>CRUDInsert.aspx</DependentUpon>
     </Compile>
     <Compile Include="ExercisePages\ExerciseHome.aspx.cs">
       <DependentUpon>ExerciseHome.aspx</DependentUpon>
